# python-hero-game

./: README.md  pyproject.toml
assets/images/maps/: map_nature.tmx  nature_layer.tsx
hero_game/src/: main.py
hero_game/src/dialog/: constants.py  dialog_box.py  factories.py
hero_game/src/game/: constants.py  game.py  game_play.py  inputs_handler.py  models.py
hero_game/src/player/: constants.py  enemy.py  hero.py  models.py  player.py
hero_game/src/player/factories/: enemy.py  hero.py
hero_game/src/shared/: constants.py  models.py  utils.py
hero_game/src/weapon/: constants.py  facotries.py  models.py  weapon.py
tests/: test_hero_game.py
